--- a/tmall/css/index.css
+++ b/tmall/css/index.css
@@ -1,12 +1,12 @@
 #header{
-    height: 33px;
+    height: 32px;
     line-height: 32px;
     background: #a9180a;
     border-bottom: 1px solid #a9180a;
 }
 .header-login{
     height: 32px;
-    line-height: 32px;
+    /* line-height: 32px; */
     float: left;
 }
 .header-login span,.header-login a{
@@ -44,9 +44,11 @@
     border-top:none;
     display: none;
 }
+
 .sub-list-tb{
-    width:200px;
+    width:72px;
     line-height: 20px;
+    /* z-index: 5; */
 }
 .sub-list > li > a{
     color:#999;
@@ -58,6 +60,10 @@
 .list-arrow:hover{
     background: #ffffff;
 }
+.list-arrow:hover .arrow{
+    transform: rotate(180deg);
+    transform-origin: 50% 25%;
+}
 .list-arrow:hover >a{
     color:#ff0036;
     text-decoration:underline;
@@ -66,29 +72,135 @@
     color: #ff0036;
     text-decoration: underline;
 }
-.slide-box .wrapper{
+.my-car{
+    font-size:12px;
+    color:black;
+}
+.my-phone{
+    color:black;
+}
+
+/* 搜索开始 */
+.logo-box{
+    overflow: hidden;
+}
+.logo{
+    width: 224px;
+    height: 130px;
+    float: left;
+}
+.search-box{
+    float: left;
+    /* background: #ff0000; */
+    margin-left: 96px;
+    margin-top: 38px;
+    overflow: hidden;
+
+}
+.search-content{
+    width: 623px;
+    height: 36px;
+    border: 2px solid #ff0036;
+}
+.search-input{
+    width: 491px;
+    height: 35px;
+    border:none;
+    outline:none;
+    text-indent: 5px;
+    float: left;
+}
+.search-btn{
+    width: 132px;
+    height: 36px;
+    background: #ff0036;
+    border:none;
+    float: left;
+    font-size:18px;
+    font-weight: 700;
+    color:#fff;
+    letter-spacing: 5px;
+}
+.search-list li{
+    float: left;
+    margin-top: 3px; 
+    padding:0px 12px;
+    position: relative;
+    left:-13px;         
+}
+.search-list li::after{
+    content:'';
+    width: 1px;
+    height: 15px;
+    background: #999999;
+    position: absolute;
+    left:0;
+    top:4px;
+
+}
+.search-list li a{
+    color:#999;
+    font-size: 14px;
+
+}
+.search-list li.list-hot a{
+    color:#ff0036;
+}
+/* 搜索结束 */
+/* 导航开始 */
+.nav{
+    padding-left:200px;
+    width:1030px;
+    overflow: hidden;
+}
+.nav li{
+    float: left;
+
+}
+.nav li img{
+    width: 100px;
+    height: 30px;
+    margin-top: 3px;
+}
+.nav a{
+    color: #333;
+    font-size: 16px;
+    font-weight: 500px;
+    display:block;
+    height:35px;
+    line-height:35px;
+    padding:0 8px;
+
+}
+.nav a:hover{
+    color:red;
+}
+/* 轮播图开始 */
+.slide-box{
+    height:500px;   
+    background: #ccc;
+    /* border-top:1px solid #ff0036; */
+}
+.slide-wrapper{
     height: 500px;
-    /* background: #0000ff; */
+    background: yellow;
     position: relative;
 }
 .menu-box{
-  
-    top:49px;
-    left:-234px;
-    background: rgba(0,0,0,0.55);
+    top:-35px;
     width: 200px;
     height: 535px;
-    position: relative;
+    position: absolute;
+    background: rgba(0,0,0,0.55);
+    /* opacity: 0.55; */
 }
 .img-box{
     height: 500px;
-    overflow: hidden;
-    position:relative;
-    top:50px;
-
+    overflow: hidden; 
 }
 .img-box img{
     width: 1230px;
+
 }
 .menu-title{
     color:#fff;
@@ -101,26 +213,102 @@
 .menu-title .icon-caidan{
     margin:0 8px 0 14px;
     font-size:18px;
- 
 }
 .slide-box{
     border-top:2px solid #ff0036;
-   
+}
+.main-list{
+    height: 31.2px;
+    line-height: 31.2px;
 }
 .main-list > a{
-    color:#ffffff;
+    color:#fff;
+    font-size: 14px;
 }
-.list-line{
-    color:red;
-
+.main-list .icon-gouwucheman{
+    font-size: 12px;
+}
+.list-icon{
+    margin:0 4px 0 14px;
+    opacity:0.5;
 }
 .main-list:hover{
-    color:green;
+    background: #fff;
 }
-.main-list .list-icon :hover{
-    color:blue;
+.main-list .list-line,.main-list .list-icon,.main-list > a
+{
+    color:#fff;
 }
-.main-list >.a{
-    padding-left: 10px;
+.main-list:hover .list-line,.main-list:hover .list-icon,.main-list:hover > a
+{
+    color:#e54077;
 }
+.main-list:hover .list-icon{
+    opacity:1;
+}
+.menu-sub-list{
+    width: 850px;
+    height: 500px;
+    background: #fff;
+    position: absolute;
+    left:200px;
+    top:0px;
+    display: none;
+}
+.main-list-box{
+    position: relative;
+}
+.sub-list-left{
+    width: 640px;
+    height: 500px;
+    background: #ff0000;
+    float: left;
+    padding:19px 30px;
+    box-sizing: border-box;
+}
+.sub-list-right{
+    width:200px;
+    height: 500px;
+    background: #FAFAFA;
+    padding:10px;
+    float: right;
+    box-sizing: border-box;
+
+    
+}
+.sub-list-right img{
+    width: 70px;
+}
+.main-list:hover .menu-sub-list{
+    /* opacity: 0.55; */
+    display: block;
+   
+}
+
+.main-list li{
+     float: left;
+}
+
+
+.main-list-hot .a{
+    color:red;
+}
+.brand-list{
+    width: 485px;
+    float: left;
+    
+}
+.brand-list img{
+     width: 485px;
+     height: 316px;
+}
+.brand-list-1{
+    width: 234px;
+    height: 316px;
+}
+.brand-list-1 img{
+    width: 234px;
+    height: 316px;
+}
+
 
